update: swagger doc
